# aidl-cli

./: CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/workflows/: main.yml
src/: main.rs  model.rs
